<resources>
    <string name="app_name">AmericanSchool</string>
    <string name="app_title" translatable="false">American School</string>
    <string name="app_subtitle">школа иностранных языков</string>
    <string name="news_title">Новости:</string>

    <string name="services_title">Услуги:</string>
    <string name="services_language">Языковые курсы</string>
    <string name="services_camp">Летний лагерь</string>
    <string name="services_talking">Talking Club</string>
    <string name="services_toefl" translatable="false">TOEFL</string>

    <string name="button_call">ПОЗВОНИТЬ</string>
    <string name="language_text">Открываем набор на ВСЕ УРОВНИ:
ABC,
BASIC,
ELEMENTARY,
BEGINNER -INTERMEDIATE,
UPPER -INTERMEDIATE,
TOEFL (IBT, PBT, IELTS)
⠀
⏰На любое время
07:40
09:00
10:20
11:40
13:40
15:00
16:20
17:40
19:00
⠀
❓Как записаться?
⠀
1️⃣Позвонить на 0(312)908-459 и записаться.
Так же вы можете пройти тест онлайн и узнать свой уровень.
⠀
2️⃣Написать ФИО, возраст, уровень, время и отправить данные на WhatsApp 0(509)908-459 (можете пройти по ссылке в описании профиля)
⠀
🔺Наши менеджеры заранее Вас зарегистрируют
⠀
3️⃣ Приходите 15 февраля 2021
к нам офис на Юнусалиева, 160
4️⃣ Приступаете к учебе
⠀
✅При себе иметь ручку, тетрадь, маску и оплату в размере 2500 сом.
⠀
*филиал на Ахунбаева переезжает в новый комфортабельный офи</string>
    <string name="services_language_descr" translatable="false">Описание языковых курсов</string>
    <string name="services_camp_descr" translatable="false">Описание летнего лагеря</string>
    <string name="services_talking_descr" translatable="false">Описание talking club</string>
    <string name="services_toefl_descr" translatable="false">Описание TOEFL услуги</string>

</resources>